# django-faucet-pipeline

./: .coveragerc  .gitignore  .mypy.ini  LICENSE  README.md  azure-pipelines.yaml  pyproject.toml  pytest.ini  tox.ini
django_faucet_pipeline/: __init__.py  apps.py
django_faucet_pipeline/templatetags/: faucet_pipeline.py
django_faucet_pipeline/tests/: manifest.json  settings.py  test_render_template.py
django_faucet_pipeline/tests/testapp/: __init__.py  apps.py
django_faucet_pipeline/tests/testapp/templates/: template.txt
