[tool.poetry]
name = "django-faucet-pipeline"
version = "1.0.0"
description = "A Django integration for faucet-pipelines"
authors = ["Niels Grewe <niels.grewe@halbordnung.de>"]
readme = "README.md"
repository = "https://github.com/ngrewe/django-faucet-pipeline"
license = "MIT"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3.7",
]
include = [
    "README.md"
]

[[tool.poetry.source]]
name = "pypi_"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
Django = ">=2.2"
python = "^3.7"

[tool.poetry.dev-dependencies]
PyHamcrest = ">=1.9.0"
pytest = ">=5.4.1"
pytest-cov = ">=2.8.1"
pytest-mock = ">=3.1.0"
pytest-django = ">=3.9.0"
tox = ">=3.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
    | django_faucet_pipeline\/migrations
  )/
)
'''
